  regel" was not checked and if the setting "Prijzen ingevoerd met belastingen"
  was set to "Ja, ik wil prijzen inclusief belasting invoeren", the plugin
  would recalculate the unit price ex vat incorrectly.
- WC3: WC3 changed what actions are fired during order create/update. As a
  result this plugin missed checking the status on order creation.
- WC: Use billing address if shipping address is not available and tax is based
  on shipping address.

5.7.4 (2019-08-29)
------------------
Bugs:
- MA2: Versie die getoond werd bij de support-informatie was de databaseschema-
  versie (uit module.xml), niet de moduleversie van de module (uit
  composer.json).
- MA2: Kortingen worden niet goed doorgegeven als prijzen ex btw zijn ingevoerd.
  getBaseShippingDiscountAmount() is inc of ex btw afhankelijk van of korting
  voor of na btw verrrekend wordt. MA1 heeft dit waarschijnlijk ook, maar daar
  gaat de winkel ook de fout in.
- WC: CRITICAL Uncaught ArgumentCountError: Too few arguments to function
  ...::woocommerce_attribute_label(), 2 passed and exactly 3 expected.
- WC: Acumulus info box op bestellingpagina verdwijnt bij handmatige sortering
  van de info boxen.
- WC: Acumulus info box op bestellingpagina toont verkeerde bedragen, en
  daardoor een waarschuwing, bij facturen met buitenlandse btw.

Refactorings:
- WC: Use $recalculatePrice (with the tag to recalculate as value) instead of
  boolean $recalculateUnitPrice.
- WC: WooCommerce 3.7 renamed get_used_coupons() to get_coupon_codes().

5.7.3 (2019-06-25) (MA2 only)
-----------------------------
Features:
- Added support for the Fooman surcharge payment module.

5.7.2 (2019-05-15) (JOO only)
-----------------------------
Bugs:
- Errors in the install process:
  * syntax error in <version> tag in xml files.
  * class inheritance dependency on Virtuemart.

Refactorings:
- JOO: Registration of our own autoloader now takes place in only 1 place: the
  Acumulus Joomla model.

5.7.1 (2019-05-02) (WC only)